# neural-network-from-scratch

./: .babelrc  .gitignore  Justfile  README.md  package.json  tsconfig.json  webpack.config.js  webpack.prod.js
engine/: Cargo.toml  rustfmt.toml
engine/driver/: Cargo.toml
engine/driver/src/: main.rs
engine/libnn/: Cargo.toml
engine/libnn/src/: fast_math.rs  lib.rs  tests.rs
engine/libnn/src/rnn/: mod.rs  test.rs
engine/wasm_interface/: Cargo.toml
engine/wasm_interface/src/: layer_viz.rs  lib.rs
src/: App.css  App.tsx  Loading.tsx  NNContext.ts  NetworkConfigurator.css  NetworkConfigurator.tsx  NoWasmSIMDMessage.css  NoWasmSIMDMessage.tsx  ResponseViz.tsx  RuntimeControls.css  RuntimeControls.tsx  index.hbs  index.tsx  nn-worker.worker.ts  presets.ts  sentry.ts  sizing.ts  types.ts  util.ts
src/Charts/: CostsPlot.tsx  ResponseViz.tsx  index.ts  vizControls.ts
src/Charts/LayersViz/: ColorsScaleLegend.tsx  CoordPicker.tsx  LayersViz.css  LayersViz.tsx  NeuronResponsePlot.tsx
src/Components/: ExpandCollapseButton.css  ExpandCollapseButton.tsx
