[package]
name = "wasm_interface"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "=0.2.78", features = ["nightly"] }
libnn = { path = "../libnn" }
rand = { version = "0.7", default_features = false, features = ["alloc"] }
console_error_panic_hook = "0.1"
pcg = "4.0"
